@@ -83,6 +83,7 @@ Changelog
  * Fix: Make admin JS i18n endpoint accessible to non-authenticated users (Matt Westcott)
  * Fix: Fix incorrect API serialisation for document `download_url` when `WAGTAILDOCS_SERVE_METHOD` is `direct` (Swojak-A)
  * Fix: Fix template configuration of snippets index results view (fidoriel, Sage Abdullah)
+ * Fix: Prevent long preview mode names from making the select element overflow the side panel (Sage Abdullah)
  * Autosize text area field will now correctly resize when switching between comments toggle states (Suyash Srivastava)
  * Docs: Add code block to make it easier to understand contribution docs (Suyash Singh)
  * Docs: Add new "Icons" page for icons customisation and reuse across the admin interface (Coen van der Kamp, Thibaud Colas)
